fixed side swipe on mobile

--- a/src/pages/homepage/homepage.styles.css
+++ b/src/pages/homepage/homepage.styles.css
@@ -1,5 +1,6 @@
 .section {
     padding: 50px 10px 90px 10px;
+    overflow-x: hidden;
 }
 
 .sub-title {
